Add Sound, improve functions

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <input name="game-speed" type="range" class="speed-slider active" min="1" max="10" step="1" value="3">
         <span class="hint-text">Press Enter To Play</span>
     </div>
+    <audio id="food_consume" src="audio/food_consume.ogg"></audio>
+    <audio id="move" src="audio/move.ogg"></audio>
+    <audio id="game_over" src="audio/game_over.ogg"></audio>
 </body>
 </html>
