--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Snake</title>
 </head>
 <body>
-    <h2 class="score-label">Score: 0</h1>
+    <div class="score-container">
+        <h2 class="score-label">Score: 0</h1>
+    </div>
     <canvas class="snake-canvas" width="1050" height="650"></canvas>
     <div class="info-overlay active">
         <label for="game-speed" class="speed-slider-label active">Game Speed: 3</label>
